--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
         <div class="footer-copyright text-center py-3 border-top">
             <p style="color : rgb(138,143,149);">Developer: Park Joon Soon</p>
             <p style="color : rgb(138,143,149);">Email: qkrwnstns52@naver.com</p><br><br><br>
-            <p class="text-primary" style="font-size:25px;"><i> Core Streaming Music Service. All Right Reserved</i></p>
+            <p class="text-primary" style="font-size:25px;"><i> Copyright © 2022. All rights reserved.</i></p>
         </div>
     </footer>
 </div>
