--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,129 +1,27 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="userHead">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <link rel="alternate" hreflang="en" href="https://us.karrotmarket.com" />
-    <link rel="alternate" hreflang="en-us" href="https://us.karrotmarket.com" />
-    <link rel="alternate" hreflang="en-gb" href="https://uk.karrotmarket.com" />
-    <link rel="alternate" hreflang="en-ca" href="https://ca.karrotmarket.com" />
-    <link rel="alternate" hreflang="ja" href="https://jp.karrotmarket.com" />
-    <link rel="alternate" hreflang="ja-jp" href="https://jp.karrotmarket.com" />
-    <link rel="alternate" hreflang="ko" href="https://daangn.com" />
-    <link rel="alternate" hreflang="ko-kr" href="https://daangn.com" />
-    <link rel="canonical" href="https://www.daangn.com/" />
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<Myheader th:fragment="header">
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="https://img.icons8.com/color/48/000000/cutting-a-carrot.png"/>
 
-    <title>daangn-clone</title>
-    <meta name="description" content="중고 거래부터 동네 정보까지, 이웃과 함께해요. 가깝고 따뜻한 당신의 근처를 만들어요." />
-    <link rel="author" href="당근마켓" />
-    <meta property="og:url" content="https://www.daangn.com/" />
-    <meta property="og:title" content="당신 근처의 당근마켓" />
-    <meta property="og:description" content="중고 거래부터 동네 정보까지, 이웃과 함께해요. 가깝고 따뜻한 당신의 근처를 만들어요." />
-    <meta property="og:site_name" content="당근마켓" />
-    <meta property="og:image" content="https://www.daangn.com/images/meta/home/daangn.png" />
-    <meta property="og:type" content="article" />
-    <meta property="og:locale" content="ko_KR" />
-    <meta property="fb:app_id" content="1463621440622064" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@danggeunmarket" />
-    <meta name="twitter:title" content="당신 근처의 당근마켓" />
-    <meta name="twitter:description" content="중고 거래부터 동네 정보까지, 이웃과 함께해요. 가깝고 따뜻한 당신의 근처를 만들어요." />
-    <meta name="twitter:image" content="https://www.daangn.com/images/meta/home/daangn.png" />
-    <meta name="naver-site-verification" content="d1f8112731c18313535732cf2516d6401bfed40a" />
-    <link href="/images/icons/shortcut_icon.png" rel="shortcut icon" type="image/x-icon">
-    <link rel="shortcut icon" type="image/x-icon" href="https://d1unjqcospf8gs.cloudfront.net/favicon.ico" />
-    <link rel="stylesheet" media="all" th:href="@{/css/styles.css}" />
-    <script src="https://d1unjqcospf8gs.cloudfront.net/assets/home/home-68e54a691402d81339d12d882793d2682ef8c32b7eb22b53d7a80f4c7a8f617b.js"></script>
-
-    <link rel="apple-touch-icon" sizes="192x192" href="/images/icons/daangn_logo_192.png">
-    <link rel="apple-touch-icon-precomposed" href="/images/icons/daangn_logo_192.png">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <meta name="csrf-param" content="authenticity_token" />
-    <meta name="csrf-token" content="VZbvKj6TwUD6O6W4YR7TTylQOGKJtVj0fu_Id1WqJJpxs2sCrRzZY9_tyXw6OVt-zfVsMNBkKUCLBpJ9pwcFtQ" />
-    <script>
-        window.fbAsyncInit = function() {
-            FB.init({
-                appId      : '1463621440622064',
-                xfbml      : true,
-                version    : 'v2.4'
-            });
-        };
-
-        (function(d, s, id){
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) {return;}
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-64551386-2', 'auto');
-        ga('send', 'pageview'); </script>
-    <!-- Facebook Pixel Code -->
-    <script>
-        !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-            n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-            n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-            t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-            document,'script','//connect.facebook.net/en_US/fbevents.js');
-
-        fbq('init', '992961397411651');
-        facebookClickEvent("PageView")
-
-        function facebookClickEvent(eventName, data) {
-            if (data !== undefined) {
-                fbq('track', eventName, data)
-            } else {
-                fbq('track', eventName)
-            }
-        }
-
-        function facebookClickEventWithPageMove(eventName, data, targetUrl) {
-            facebookClickEvent(eventName, data);
-            window.location.href = targetUrl;
-        }
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-                   src="https://www.facebook.com/tr?id=992961397411651&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Facebook Pixel Code -->
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PJSK4QL');</script>
-    <!-- End Google Tag Manager -->
-
-    <script type="application/ld+json">
-        {
-            "@context": "http://schema.org",
-            "@type": "Organization",
-            "name": "당근마켓",
-            "url": "https://www.daangn.com",
-            "sameAs": [
-                "https://www.facebook.com/daangn",
-                "https://blog.naver.com/daangn",
-                "https://www.youtube.com/channel/UC8tsBsQBuF7QybxgLmStihA",
-                "https://twitter.com/daangnmarket",
-                "https://www.instagram.com/daangnmarket",
-                "https://apps.apple.com/kr/app/id1018769995",
-                "https://play.google.com/store/apps/details?id=com.towneers.www"
-            ],
-            "logo": "https://www.daangn.com/logo.png"
-        }
-    </script>
-</head>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <button type="button" class="btn btn-outline-secondary btn-space">회원가입</button>
+                <button type="button" class="btn btn-outline-secondary btn-space" th:onclick="|location.href='/login'|">로그인</button>
+                <button type="button" class="btn btn-outline-secondary btn-space">채팅하기</button>
+            </ul>
+        </div>
+    </nav>
+</Myheader>
 </html>
