--- a/src/main/resources/templates/member/LoginForm.html
+++ b/src/main/resources/templates/member/LoginForm.html
@@ -1,11 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
-</head>
+<head th:replace="fragments/head::head"></head>
 <body>
-<Myheader th:replace="fragments/Myheader::header"></Myheader>
+<header th:replace="fragments/header::header"></header>
 
 <section class="vh-100">
     <div class="container-fluid h-custom">
@@ -14,7 +10,7 @@
                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid" alt="Sample image">
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form>
+                <form action="/login_proc" method="POST">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign in with</p>
                         <button type="button" class="btn btn-primary btn-floating mx-1">
@@ -36,13 +32,13 @@
 
                     <!-- Email input -->
                     <div class="form-outline mb-4">
-                        <input type="email" id="form3Example3" class="form-control form-control-lg" placeholder="Enter a valid email address" />
+                        <input type="text" th:name="username" class="form-control form-control-lg" placeholder="아이디를 입력해주세요." />
 
                     </div>
 
                     <!-- Password input -->
                     <div class="form-outline mb-3">
-                        <input type="password" id="form3Example4" class="form-control form-control-lg" placeholder="Enter password" />
+                        <input type="password" th:name="password" class="form-control form-control-lg" placeholder="비밀번호를 입력해주세요." />
 
                     </div>
 
@@ -58,11 +54,9 @@
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="button" class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!" class="link-danger">Register</a></p>
+                        <button type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/signup" class="link-danger">Register</a></p>
                     </div>
-
                 </form>
             </div>
         </div>
