--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head::head"></head>
+<header th:replace="fragments/header::header"></header>
 <body>
-    <header th:replace="fragments/header::header"></header>
-    <section id="" class="">
+<section class="vh-100">
+    <div class="container-fluid h-custom">
+        <div class="row d-flex justify-content-center align-items-center h-100">
 
-    </section>
-
+        </div>
+    </div>
+</section>
 </body>
 <footer th:replace="fragments/footer::footer"></footer>
 </html>
