--- a/src/main/resources/templates/member/CreateMemberForm.html
+++ b/src/main/resources/templates/member/CreateMemberForm.html
@@ -3,94 +3,71 @@
 
 
 <head th:replace="fragments/head::head">
-    <style>
-        body {
-            min-height: 100vh;
-
-            background: -webkit-gradient(linear, left bottom, right top, from(#92b5db), to(#1d466c));
-            background: -webkit-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-            background: -moz-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-            background: -o-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-            background: linear-gradient(to top right, #92b5db 0%, #1d466c 100%);
-        }
-
-        .input-form {
-            max-width: 300px;
-
-            margin-top: 80px;
-            padding: 32px;
-
-            background: #fff;
-            -webkit-border-radius: 10px;
-            -moz-border-radius: 10px;
-            border-radius: 10px;
-            -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-            -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-            box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
-        }
-    </style>
 </head>
 
 <header th:replace="fragments/header::header"></header>
 <body>
-<div class="container">
-    <div class="input-form-backgroud row">
-        <div class="input-form col-md-12 mx-auto">
-            <h4 class="mb-3">회원가입</h4>
-            <form class="validation-form" novalidate th:action="@{/signup}" th:method="post" th:object="${memberForm}">
-                <div class="mb-3">
-                    <label th:for="username">아이디</label>
-                    <input type="text" class="form-control" th:field="*{username}" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        아이디를 입력해주세요.
+<section class="vh-100">
+    <div class="container">
+        <div class="input-form-background row">
+            <div class="input-form col-lg-12 mx-auto">
+                <h4 class="mb-3">회원가입</h4>
+                <form class="validation-form" novalidate th:action="@{/signup}" th:method="post" th:object="${memberForm}">
+                    <div class="mb-5">
+                        <label th:for="username">아이디</label>
+                        <input type="text" class="form-control" th:field="*{username}" placeholder="" value="" required>
+                        <div class="invalid-feedback">
+                            아이디를 입력해주세요.
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label th:for="nickname">별명</label>
-                    <input type="text" class="form-control" th:field="*{nickname}" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        별명을 입력해주세요.
+                    <div class="mb-5">
+                        <label th:for="nickname">별명</label>
+                        <input type="text" class="form-control" th:field="*{nickname}" placeholder="" value="" required>
+                        <div class="invalid-feedback">
+                            별명을 입력해주세요.
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label th:for="password">비밀번호</label>
-                    <input type="password" class="form-control" th:field="*{password}" placeholder="" required>
-                    <div class="invalid-feedback">
-                        비밀번호를 입력해주세요.
+                    <div class="mb-5">
+                        <label th:for="password">비밀번호</label>
+                        <input type="password" class="form-control" th:field="*{password}" placeholder="" required>
+                        <div class="invalid-feedback">
+                            비밀번호를 입력해주세요.
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label th:for="email">이메일</label>
-                    <input type="email" class="form-control" th:field="*{email}" placeholder="you@example.com" required>
-                    <div class="invalid-feedback">
-                        이메일을 입력해주세요.
+                    <div class="mb-5">
+                        <label th:for="email">이메일</label>
+                        <input type="email" class="form-control" th:field="*{email}" placeholder="you@example.com" required>
+                        <div class="invalid-feedback">
+                            이메일을 입력해주세요.
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label th:for="state">주소</label>
-                    <select class="form-select" th:field="*{state}">
-                        <option value=""> --시도-- </option>
-                        <option th:each="pprArea : ${pprAreaList}" th:value="${pprArea.areaCd}" th:text="${pprArea.areaName}"></option>
-                    </select>
-                    <label th:for="city">주소</label>
-                    <select class="form-select" th:field="*{city}">
-                        <option value="--시군구--"> --시군구-- </option>
-                    </select>
-                    <div class="invalid-feedback">
-                        주소를 입력해주세요.
+                    <div class="mb-5">
+                        <label th:for="state">시/도</label>
+                        <select class="form-select" th:field="*{state}">
+                            <option value=""> --시도-- </option>
+                            <option th:each="pprArea : ${pprAreaList}" th:value="${pprArea.areaCd}" th:text="${pprArea.areaName}"></option>
+                        </select>
+                        <br>
+                        <label th:for="city">시/군/구</label>
+                        <select class="form-select" th:field="*{city}">
+                            <option value="--시군구--"> --시군구-- </option>
+                        </select>
+                        <div class="invalid-feedback">
+                            주소를 입력해주세요.
+                        </div>
                     </div>
-                </div>
-                <hr class="mb-4">
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="aggrement" required>
-                    <label class="custom-control-label" for="aggrement">개인정보 수집 및 이용에 동의합니다.</label>
-                </div>
-                <div class="mb-4"></div>
-                <button class="btn btn-primary btn-lg btn-block" type="submit">가입 완료</button>
-            </form>
+                    <hr class="mb-4">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="aggrement" required>
+                        <label class="custom-control-label" for="aggrement">개인정보 수집 및 이용에 동의합니다.</label>
+                    </div>
+                    <div class="mb-4"></div>
+                    <button class="btn btn-primary btn-lg btn-block" type="submit">가입 완료</button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
+</section>
 
 <script async th:inline="javascript">
     /*<![CDATA[*/
