--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head::head"></head>
+
 <header th:replace="fragments/header::header"></header>
 <body>
 <script th:inline="javascript">
