--- a/src/main/resources/templates/member/LoginForm.html
+++ b/src/main/resources/templates/member/LoginForm.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head::head"></head>
 
 <header th:replace="fragments/header::header"></header>
 <body>
-
 <section class="vh-100">
     <div class="container">
         <div class="input-form-background row">
