--- a/src/main/resources/templates/member/CreateMemberForm.html
+++ b/src/main/resources/templates/member/CreateMemberForm.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-
-
-<head th:replace="fragments/head::head">
-</head>
+<head th:replace="fragments/head::head"></head>
 
 <header th:replace="fragments/header::header"></header>
 <body>
