--- a/src/main/resources/templates/member/CertifyMemberAddress.html
+++ b/src/main/resources/templates/member/CertifyMemberAddress.html
@@ -6,7 +6,7 @@
 <body>
 
 <section class="vh-100">
-    <div class="container-fluid h-custom">
+    <div class="container h-custom">
         <div class="row d-flex justify-content-center align-items-center h-100 wrapper">
             <div id="map" style="height:350px;"></div>
             <p id="crtText"></p><br><br><br><br><br><br><br>
