--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
             <a class="navbar-brand" href="/">
                 <img src="https://img.icons8.com/emoji/48/000000/carrot-emoji.png"/>
             </a>
-            <span style="font-family: 'Jua', sans-serif; color :orangered; font-size: 30px; margin-right: 30px;">당근 마켓</span>
+            <a href="/" style="text-decoration:none;font-family: 'Jua', sans-serif; color :orangered; font-size: 30px; margin-right: 30px;">당근 마켓</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
