--- a/src/main/resources/templates/board/BoardForm.html
+++ b/src/main/resources/templates/board/BoardForm.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="input-form-background row">
-            <div class="input-form col-lg-12 mx-auto">
+            <div class="input-form mx-auto">
                 <form th:action="@{/board/new}" th:object="${boardForm}" method="post">
                     <div class="mb-5">
                         <div style="margin-left: 12px; color:#dc3545">
