--- a/src/main/resources/templates/member/CreateMemberForm.html
+++ b/src/main/resources/templates/member/CreateMemberForm.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="input-form-background row">
-            <div class="input-form col-lg-12 mx-auto">
+            <div class="input-form mx-auto">
                 <h4 class="mb-3">회원가입</h4>
                 <form class="validation-form" novalidate th:action="@{/signup}" th:method="post" th:object="${memberForm}">
                     <div class="mb-5">
