--- a/src/main/resources/templates/member/LoginForm.html
+++ b/src/main/resources/templates/member/LoginForm.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="input-form-background row">
-            <div class="input-form col-lg-12 mx-auto">
+            <div class="input-form mx-auto">
                 <form action="/login_proc" method="POST">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign in with</p>
