--- a/src/main/resources/templates/board/BoardForm.html
+++ b/src/main/resources/templates/board/BoardForm.html
@@ -38,7 +38,7 @@
                         <input th:type="text" th:field="*{price}" class="form-control" placeholder="￦ 가격">
                     </div>
                     <div class="mb-5" id="contentBox" style="display: none">
-                        <textarea th:rows="10" th:type="text" th:field="*{content}" class="form-control" placeholder="글 제목"></textarea>
+                        <textarea th:rows="10" th:type="text" th:field="*{content}" class="form-control" placeholder="글 제목" wrap="hard"></textarea>
                     </div>
                     <div class="mb-5" id="detailBox" style="display: none">
                         <label th:for="detail" id="detailLabel"></label>
