--- a/src/main/resources/templates/board/InquireBoard.html
+++ b/src/main/resources/templates/board/InquireBoard.html
@@ -6,7 +6,29 @@
 <body>
 <div class="container">
     <div class="row d-flex justify-content-center align-items-center h-100">
-        <p>안녕</p>
+        <div class="card mb-3" style="width: 30rem;">
+            <img th:src="${board.image}" class="card-img-top" alt="...">
+            <div class="card-header bg-transparent">
+                <p class="card-title" th:text="${board.nickname}" style="font-weight: bold"></p>
+                <p class="card-text" th:text="${board.city}"></p>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title" th:text="${board.title}" style="font-weight: bold">Card title</h5>
+                <small th:class="text-muted" th:text="${board.category}"></small> ·
+                <small th:class="text-muted" th:text="${board.diffUpdatedAt}"></small>
+                <br><br>
+                <p class="card-text" th:utext="${board.content}"></p>
+                <br><br>
+                <small th:class="text-muted" >채팅 1</small> ·
+                <small th:class="text-muted" >관심 2</small> ·
+                <small th:class="text-muted" th:text="|조회 ${board.view}|"></small>
+            </div>
+            <div class="card-footer bg-transparent">
+                <a href="#" class="card-link" style="margin-right: 5px;"><img src="https://img.icons8.com/ios/50/000000/hearts--v1.png"/></a>
+                <span class="card-text" th:text="|${#numbers.formatInteger(board.price, 0, 'COMMA')}￦|"></span>
+                <a href="#" class="btn btn-primary" style="margin-left: 180px; background-color: orange;">채팅하기</a>
+            </div>
+        </div>
     </div>
 </div>
 </body>
