--- a/src/main/resources/templates/board/InquireBoardList.html
+++ b/src/main/resources/templates/board/InquireBoardList.html
@@ -25,13 +25,13 @@
             <th:block th:each="i : ${#numbers.sequence(0, boardList.size() - 1)}">
                 <div th:if="${i % 4 eq 0}" class="row">
                     <th:block th:each="j : ${#numbers.sequence(i, i+3)}">
-                        <div th:if="${j le boardList.size() - 1}" class="card border-info mb-3" style="width: 14rem; cursor: pointer;" th:onclick="|location.href='/board/${boardList[j].id}'|">
+                        <div th:if="${j le boardList.size() - 1}" class="card border-info mb-3" style="width: 14rem; cursor: pointer; padding-top: 12px;" th:onclick="|location.href='/board/${boardList[j].id}'|">
                                 <img class="card-img-top" th:src="${boardList[j].image}" alt="Card image cap" style="width: 200px; height: 150px;">
                                 <div class="card-body">
-                                    <h5 class="card-title" th:text="${boardList[j].title}">Card title</h5>
+                                    <h5 class="card-title" style="white-space:nowrap; overflow: hidden; text-overflow: ellipsis;" th:text="${boardList[j].title}">Card title</h5>
                                     <p class="card-text">
                                         <small class="text-muted" th:text="${boardList[j].city}"></small> ·
-                                        <small class="text-muted" th:text="${boardList[j].diffUpdatedAt}"></small>
+                                        <small class="text-muted" th:text="${boardList[j].diffCreatedAt}"></small>
                                     </p>
                                     <p class="card-text" th:text="|${#numbers.formatInteger(boardList[j].price, 0, 'COMMA')}￦|">750,000원</p>
                                 </div>
