--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -21,8 +21,6 @@
 
 body {
     min-height: 100vh;
-
-
 }
 
 .input-form {
@@ -36,4 +34,8 @@ body {
     -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
     box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
+}
+
+.fieldError {
+    border-color: #bd2130 !important;
 }
