--- a/src/main/resources/templates/member/CreateMemberForm.html
+++ b/src/main/resources/templates/member/CreateMemberForm.html
@@ -10,32 +10,22 @@
                 <h4 class="mb-3">회원가입</h4>
                 <form class="validation-form" novalidate th:action="@{/signup}" th:method="post" th:object="${memberForm}">
                     <div class="mb-5">
-                        <label th:for="username">아이디</label>
-                        <input type="text" class="form-control" th:field="*{username}" placeholder="" value="" required>
-                        <div class="invalid-feedback">
-                            아이디를 입력해주세요.
-                        </div>
+                        <label th:for="username">아이디</label><br>
+                        <input type="text" style="width:581px; display: inline-block" class="form-control" th:field="*{username}" th:class="${#fields.hasErrors('username')} ? 'form-control fieldError' : 'form-control'" placeholder="" value="" required />
+                        <button style="display: inline-block; width:130px; margin-left: 20px;" class="btn btn-primary btn-lg" type="button">중복 확인</button>
+                        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}" style="color:#bd2130;">Incorrect Data</p>
                     </div>
                     <div class="mb-5">
                         <label th:for="nickname">별명</label>
                         <input type="text" class="form-control" th:field="*{nickname}" placeholder="" value="" required>
-                        <div class="invalid-feedback">
-                            별명을 입력해주세요.
-                        </div>
                     </div>
                     <div class="mb-5">
                         <label th:for="password">비밀번호</label>
                         <input type="password" class="form-control" th:field="*{password}" placeholder="" required>
-                        <div class="invalid-feedback">
-                            비밀번호를 입력해주세요.
-                        </div>
                     </div>
                     <div class="mb-5">
                         <label th:for="email">이메일</label>
                         <input type="email" class="form-control" th:field="*{email}" placeholder="you@example.com" required>
-                        <div class="invalid-feedback">
-                            이메일을 입력해주세요.
-                        </div>
                     </div>
                     <div class="mb-5">
                         <label th:for="state">시/도</label>
@@ -48,9 +38,6 @@
                         <select class="form-select" th:field="*{city}">
                             <option value="--시군구--"> --시군구-- </option>
                         </select>
-                        <div class="invalid-feedback">
-                            주소를 입력해주세요.
-                        </div>
                     </div>
                     <hr class="mb-4">
                     <div class="custom-control custom-checkbox">
